Mac Book Test Run

--- a/src/Out-GridView/.vscode/settings.json
+++ b/src/Out-GridView/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "omnisharp.enableRoslynAnalyzers": true
+    "omnisharp.enableRoslynAnalyzers": true,
+    "terminal.integrated.shell.windows": "c:/Program Files/PowerShell/6/pwsh.exe"
 }
