--- a/src/Out-GridView/OutGridView.csproj
+++ b/src/Out-GridView/OutGridView.csproj
@@ -1,5 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <AssemblyName>OutGridView</AssemblyName>
   </PropertyGroup>
