refactor repo to the structure we want to ship with (#2)
* refactor repo to the structure we want to ship with

* newline at end of file

* update path and build.ps1

* build update

--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,6 @@ project.lock.json
 *.pyc
 nupkg/
 
-# Visual Studio Code
-.vscode
-
 # Rider
 .idea
 
@@ -38,4 +35,6 @@ module/
 
 # Visual Studio 2015
 .vs/
-.vscode/
+
+# ingore downloaded .NET
+.dotnet
