--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": ".NET Core Launch (console)",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "publishSolution",
+            "preLaunchTask": "build",
             "program": "${workspaceFolder}/Cmdlet/bin/Debug/netcoreapp3.0/win10-x64/OutGridViewCmdlet.dll",
             "args": [],
             "cwd": "${workspaceFolder}/Cmdlet",
@@ -19,7 +19,7 @@
             "name": ".NET Core Launch (application)",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "buildApp",
+            "preLaunchTask": "build",
             "program": "${workspaceFolder}/Application/bin/Debug/netcoreapp3.0/win10-x64/OutGridViewApplication.dll",
             "args": [],
             "cwd": "${workspaceFolder}/Application",
