--- a/src/GraphicalToolsModule/GraphicalToolsModule.csproj
+++ b/src/GraphicalToolsModule/GraphicalToolsModule.csproj
@@ -2,11 +2,16 @@
     <PropertyGroup>
         <TargetFramework>netcoreapp3.0</TargetFramework>
     </PropertyGroup>
+
     <ItemGroup>
-        <PackageReference Include="Microsoft.DotNet.PlatformAbstractions" Version="3.0.0-preview7-27912-14" />
         <PackageReference Include="Microsoft.PowerShell.SDK" Version="6.2.1" />
     </ItemGroup>
+
     <ItemGroup>
-        <ProjectReference Include ="../Models/OutGridViewModels.csproj" />
+        <ProjectReference Include ="../OutGridView.Models/OutGridView.Models.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <None Update="GraphicalTools.psd1" CopyToOutputDirectory="PreserveNewest" />
     </ItemGroup>
 </Project>
