--- a/.vsts-ci/azure-pipelines-release.yml
+++ b/.vsts-ci/azure-pipelines-release.yml
@@ -64,7 +64,7 @@ jobs:
     inputs:
       scriptType: inlineScript
       inlineScript: |
-        Expand-Archive -Path "$(System.ArtifactsDirectory)\GraphicalTools-Windows_NT.zip" -DestinationPath "$(System.ArtifactsDirectory)"
+        Expand-Archive -Path "$(System.ArtifactsDirectory)\GraphicalTools\GraphicalTools-Windows_NT.zip" -DestinationPath "$(System.ArtifactsDirectory)\GraphicalTools"
 
   - task: PkgESCodeSign@10
     displayName: 'CodeSign tools/releaseBuild/signing.xml'
@@ -79,7 +79,7 @@ jobs:
       scriptType: inlineScript
       inlineScript: |
         $signed="$(System.ArtifactsDirectory)\Signed\GraphicalTools\*"
-        $notSigned="$(System.ArtifactsDirectory)\GraphicalTools"
+        $notSigned="$(System.ArtifactsDirectory)\GraphicalTools\GraphicalTools"
         Copy-Item $signed $notSigned -Recurse -Force
 
   - task: PowerShell@1
@@ -87,8 +87,8 @@ jobs:
     inputs:
       scriptType: inlineScript
       inlineScript: |
-        $signedDir = "$(System.ArtifactsDirectory)\GraphicalTools"
-        New-FileCatalog -CatalogFilePath "$(System.ArtifactsDirectory)\GraphicalTools.cat" -Path "$signedDir"
+        $signedDir = "$(System.ArtifactsDirectory)\GraphicalTools\GraphicalTools"
+        New-FileCatalog -CatalogFilePath "$(System.ArtifactsDirectory)\GraphicalTools\GraphicalTools.cat" -Path "$signedDir"
 
   - task: PkgESCodeSign@10
     displayName: 'CodeSign tools/releaseBuild/FileCatalogSigning.xml'
@@ -101,4 +101,4 @@ jobs:
     displayName: 'Upload Artifacts'
     inputs:
       scriptType: inlineScript
-      inlineScript: 'Write-Host "##vso[artifact.upload containerfolder=GraphicalTools;artifactname=GraphicalTools]$(System.ArtifactsDirectory)\GraphicalTools"'
+      inlineScript: 'Write-Host "##vso[artifact.upload containerfolder=GraphicalTools;artifactname=GraphicalTools]$(System.ArtifactsDirectory)\GraphicalTools\GraphicalTools"'
