--- a/.vsts-ci/azure-pipelines-release.yml
+++ b/.vsts-ci/azure-pipelines-release.yml
@@ -60,7 +60,7 @@ jobs:
       downloadType: specific
 
   - task: PowerShell@1
-    displayName: 'Copy unsigned files to signed folder'
+    displayName: 'Extract build zip'
     inputs:
       scriptType: inlineScript
       inlineScript: |
