Update azure-pipelines-release.yml for Azure Pipelines

--- a/.vsts-ci/azure-pipelines-release.yml
+++ b/.vsts-ci/azure-pipelines-release.yml
@@ -41,9 +41,7 @@ jobs:
 
 - job: 'SignBuild'
   displayName: Signing Build
-  dependsOn:
-    - 'ReleaseBuild'
-    - 'credscan'
+  dependsOn: 'ReleaseBuild'
   pool:
     name: 'Package ES CodeHub Lab E'
     demands: DotNetFramework
