--- a/.vsts-ci/azure-pipelines-release.yml
+++ b/.vsts-ci/azure-pipelines-release.yml
@@ -66,7 +66,7 @@ jobs:
     inputs:
       scriptType: inlineScript
       inlineScript: |
-        Expand-Archive -Path "$(System.ArtifactsDirectory)\GraphicalTools\GraphicalTools-Windows_NT.zip" -DestinationPath "$(System.ArtifactsDirectory)\GraphicalTools"
+        Expand-Archive -Path "$(System.ArtifactStagingDirectory)\GraphicalTools\GraphicalTools-Windows_NT.zip" -DestinationPath "$(System.ArtifactStagingDirectory)\GraphicalTools"
 
   - task: PkgESCodeSign@10
     displayName: 'CodeSign tools/releaseBuild/signing.xml'
@@ -74,16 +74,16 @@ jobs:
       SYSTEM_ACCESSTOKEN: $(System.AccessToken)
     inputs:
       signConfigXml: tools/releaseBuild/signing.xml
-      inPathRoot: '$(System.ArtifactsDirectory)'
-      outPathRoot: '$(System.ArtifactsDirectory)\Signed'
+      inPathRoot: '$(System.ArtifactStagingDirectory)'
+      outPathRoot: '$(System.ArtifactStagingDirectory)\Signed'
 
   - task: PowerShell@1
     displayName: 'Copy signed files to unsigned folder'
     inputs:
       scriptType: inlineScript
       inlineScript: |
-        $signed="$(System.ArtifactsDirectory)\Signed\GraphicalTools\*"
-        $notSigned="$(System.ArtifactsDirectory)\GraphicalTools"
+        $signed="$(System.ArtifactStagingDirectory)\Signed\GraphicalTools\*"
+        $notSigned="$(System.ArtifactStagingDirectory)\GraphicalTools"
         Copy-Item $signed $notSigned -Recurse -Force
 
   - task: PowerShell@1
@@ -91,8 +91,8 @@ jobs:
     inputs:
       scriptType: inlineScript
       inlineScript: |
-        $signedDir = "$(System.ArtifactsDirectory)\GraphicalTools\GraphicalTools"
-        New-FileCatalog -CatalogFilePath "$(System.ArtifactsDirectory)\GraphicalTools\GraphicalTools.cat" -Path "$signedDir"
+        $signedDir = "$(System.ArtifactStagingDirectory)\GraphicalTools\GraphicalTools"
+        New-FileCatalog -CatalogFilePath "$(System.ArtifactStagingDirectory)\GraphicalTools\GraphicalTools.cat" -Path "$signedDir"
 
   - task: PkgESCodeSign@10
     displayName: 'CodeSign tools/releaseBuild/FileCatalogSigning.xml'
@@ -100,8 +100,8 @@ jobs:
       SYSTEM_ACCESSTOKEN: $(System.AccessToken)
     inputs:
       signConfigXml: tools/releaseBuild/FileCatalogSigning.xml
-      inPathRoot: '$(System.ArtifactsDirectory)'
-      outPathRoot: '$(System.ArtifactsDirectory)'
+      inPathRoot: '$(System.ArtifactStagingDirectory)'
+      outPathRoot: '$(System.ArtifactStagingDirectory)'
 
   - task: ms.vss-governance-buildtask.governance-build-task-component-detection.ComponentGovernanceComponentDetection@0
     displayName: 'Component Detection'
@@ -167,4 +167,4 @@ jobs:
     condition: succeededOrFailed()
     inputs:
       scriptType: inlineScript
-      inlineScript: 'Write-Host "##vso[artifact.upload containerfolder=GraphicalTools-Signed;artifactname=GraphicalTools-Signed]$(System.ArtifactsDirectory)\GraphicalTools\GraphicalTools"'
+      inlineScript: 'Write-Host "##vso[artifact.upload containerfolder=GraphicalTools-Signed;artifactname=GraphicalTools-Signed]$(System.ArtifactStagingDirectory)\GraphicalTools\GraphicalTools"'
