--- a/.vsts-ci/azure-pipelines-release.yml
+++ b/.vsts-ci/azure-pipelines-release.yml
@@ -133,7 +133,7 @@ jobs:
     inputs:
       InputType: 'Basic'
       Function: 'analyze'
-      AnalyzeTarget: '$(Build.ArtifactStagingDirectory)\GraphicalTools*\*.dll;$(Build.ArtifactStagingDirectory)\GraphicalTools*\*.exe'
+      AnalyzeTarget: '$(Build.ArtifactStagingDirectory)\**\*.dll;$(Build.ArtifactStagingDirectory)\**\*.exe'
 
   # Publish results as artifacts
   - task: PublishSecurityAnalysisLogs@3
