--- a/.vsts-ci/azure-pipelines-release.yml
+++ b/.vsts-ci/azure-pipelines-release.yml
@@ -133,7 +133,8 @@ jobs:
     inputs:
       InputType: 'Basic'
       Function: 'analyze'
-      AnalyzeTarget: '$(Build.ArtifactStagingDirectory)\**\*.dll;$(Build.ArtifactStagingDirectory)\**\*.exe'
+      AnalyzeRecurse: true
+      AnalyzeTarget: '$(Build.ArtifactStagingDirectory)\*.dll;$(Build.ArtifactStagingDirectory)\*.exe'
 
   # Publish results as artifacts
   - task: PublishSecurityAnalysisLogs@3
