--- a/.vsts-ci/azure-pipelines-release.yml
+++ b/.vsts-ci/azure-pipelines-release.yml
@@ -134,7 +134,7 @@ jobs:
       InputType: 'Basic'
       Function: 'analyze'
       AnalyzeRecurse: true
-      AnalyzeTarget: '$(Build.ArtifactStagingDirectory)\*.dll;$(Build.ArtifactStagingDirectory)\*.exe'
+      AnalyzeTarget: '$(Build.ArtifactStagingDirectory)\GraphicalToolsModule.dll;$(Build.ArtifactStagingDirectory)\OutGridView*.dll;$(Build.ArtifactStagingDirectory)\OutGridView*.exe;$(Build.ArtifactStagingDirectory)\GraphicalTools-Signed\osx-x64\OutGridView.Gui'
 
   # Publish results as artifacts
   - task: PublishSecurityAnalysisLogs@3
