--- a/src/OutGridView.Models/OutGridView.Models.csproj
+++ b/src/OutGridView.Models/OutGridView.Models.csproj
@@ -1,4 +1,5 @@
 <Project Sdk="Microsoft.NET.Sdk">
+  <Import Project="..\..\GraphicalTools.Common.props" />
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
