--- a/src/OutGridView.Gui/OutGridView.Gui.csproj
+++ b/src/OutGridView.Gui/OutGridView.Gui.csproj
@@ -1,4 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+  <Import Project="..\..\GraphicalTools.Common.props" />
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
