Adds Readme for project & removes help links

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,7 +15,8 @@
             "type": "process",
             "args": [
                 "-c",
-                "Invoke-Build"
+                "Invoke-Build",
+                "Build"
             ],
             "problemMatcher": "$msCompile",
             "group": {
