--- a/src/Microsoft.PowerShell.GraphicalTools/Microsoft.PowerShell.GraphicalTools.csproj
+++ b/src/Microsoft.PowerShell.GraphicalTools/Microsoft.PowerShell.GraphicalTools.csproj
@@ -13,6 +13,6 @@
     </ItemGroup>
 
     <ItemGroup>
-        <None Update="GraphicalTools.psd1" CopyToOutputDirectory="PreserveNewest" />
+        <None Update="Microsoft.PowerShell.GraphicalTools.psd1" CopyToOutputDirectory="PreserveNewest" />
     </ItemGroup>
 </Project>
