chmod on non-win

--- a/src/Microsoft.PowerShell.GraphicalTools/Microsoft.PowerShell.GraphicalTools.csproj
+++ b/src/Microsoft.PowerShell.GraphicalTools/Microsoft.PowerShell.GraphicalTools.csproj
@@ -14,5 +14,6 @@
 
     <ItemGroup>
         <None Update="Microsoft.PowerShell.GraphicalTools.psd1" CopyToOutputDirectory="PreserveNewest" />
+        <None Update="Microsoft.PowerShell.GraphicalTools.psm1" CopyToOutputDirectory="PreserveNewest" />
     </ItemGroup>
 </Project>
