Step 1: rename directories and directory references Rename the OutGridView.Gui and OutGridView.Model directories.

--- a/src/Microsoft.PowerShell.GraphicalTools/Microsoft.PowerShell.GraphicalTools.csproj
+++ b/src/Microsoft.PowerShell.GraphicalTools/Microsoft.PowerShell.GraphicalTools.csproj
@@ -9,7 +9,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include ="../OutGridView.Models/OutGridView.Models.csproj" />
+        <ProjectReference Include ="../GraphicalTools.Models/GraphicalTools.Models.csproj" />
     </ItemGroup>
 
     <ItemGroup>
