--- a/src/GraphicalTools.Gui/GraphicalTools.Gui.csproj
+++ b/src/GraphicalTools.Gui/GraphicalTools.Gui.csproj
@@ -24,7 +24,7 @@
     <PackageReference Include="Microsoft.DotNet.PlatformAbstractions" Version="3.0.0-preview7-27912-14" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include ="../OutGridView.Models/OutGridView.Models.csproj" />
+    <ProjectReference Include ="../GraphicalTools.Models/GraphicalTools.Models.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Watch Include="**\*.xaml" />
