Changed menu to support ESC=Close, ENTER=Accept

--- a/src/Microsoft.PowerShell.ConsoleGuiTools/Microsoft.PowerShell.ConsoleGuiTools.csproj
+++ b/src/Microsoft.PowerShell.ConsoleGuiTools/Microsoft.PowerShell.ConsoleGuiTools.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
         <ProjectReference Include ="../OutGridView.Models/OutGridView.Models.csproj" />
+        <!-- <ProjectReference Include="..\..\..\gui.cs\Terminal.Gui\Terminal.Gui.csproj" /> -->
     </ItemGroup>
 
     <ItemGroup>
