--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,5 @@
     "files.associations": {
         "**/.vsts-ci/**/*.yml":"azure-pipelines"
     },
-    "cSpell.enabled": false
+    "cSpell.enabled": true
 }
